# reportgen

./: pyproject.toml  requirements.txt
src/: analyzer.py  cli.py  config.json  config_store.py  graphs.py  loader.py  main.py  reporter.py
src/reportgen/: analyzer.py  cli.py  config.json  config_store.py  graphs.py  loader.py  main.py  past_results.json  reporter.py  storage.py
