[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reportgen"
version = "0.1.0"
description = "API performance report generator"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3",
    "matplotlib>=3.8",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
]

[project.scripts]
reportgen = "reportgen.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reportgen = ["config.json"]
